# transcribe-rs

./: ADDING_ENGINES.md  Cargo.toml  README.md
examples/: gigaam.rs  moonshine.rs  moonshine_streaming.rs  parakeet.rs  sense_voice.rs  whisper.rs  whisperfile.rs
src/: audio.rs  lib.rs  whisperfile.rs
src/engines/: whisper.rs
src/features/: mod.rs
src/onnx/: mod.rs  session.rs
src/onnx/gigaam/: mod.rs
src/onnx/moonshine/: model.rs  streaming.rs
src/onnx/parakeet/: mod.rs
src/onnx/sense_voice/: mod.rs
src/remote/: openai.rs
src/whisper_cpp/: mod.rs
tests/: gigaam.rs  moonshine.rs  openai.rs  parakeet.rs  sense_voice.rs  whisper.rs  whisperfile.rs
tests/common/: mod.rs
